--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,15 @@
     src: local('YekanBakh'), url('../fonts/YekanBakh-Bold/YekanBakh-Bold.woff') format('woff'), url('../fonts/YekanBakh-Bold/YekanBakh-Bold.ttf') format('truetype');
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'YekanBakh' , sans-serif;
+    font-family: 'YekanBakh', sans-serif;
 }
 
 body {
@@ -23,7 +27,8 @@ ul {
     list-style-type: none;
 }
 
-a , a:hover {
+a,
+a:hover {
     text-decoration: none;
 }
 
@@ -36,6 +41,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    position: fixed;
+    z-index: 10;
+    margin-top: -74px;
 }
 
 a.bazaar-logo {
@@ -69,14 +77,16 @@ ul.header-menu li:first-of-type {
     border-radius: 3px;
 }
 
-ul.header-menu li button , ul.header-menu li a {
+ul.header-menu li button,
+ul.header-menu li a {
     font-size: 16px;
     line-height: 24px;
     color: #6b6b6b;
     font-weight: 400;
 }
 
-ul.header-menu li button:hover , ul.header-menu li a:hover {
+ul.header-menu li button:hover,
+ul.header-menu li a:hover {
     color: #0DA05B;
 }
 
@@ -177,7 +187,8 @@ button.change-lang:hover {
 }
 
 main {
-    margin: 16px 130px 16px 130px;
+    margin: 74px 130px 16px 130px;
+    z-index: 5;
 }
 
 section.programs {
@@ -185,7 +196,7 @@ section.programs {
     height: 58px;
     background-color: #FFFFFF;
     border-radius: 8px;
-    border: 1px solid rgba(0,0,0,.1);
+    border: 1px solid rgba(0, 0, 0, .1);
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -204,7 +215,7 @@ section.applications {
     height: 230px;
     background-color: #FFFFFF;
     border-radius: 8px;
-    border: 1px solid rgba(0,0,0,.1);
+    border: 1px solid rgba(0, 0, 0, .1);
     margin-bottom: 16px;
 }
 
@@ -214,7 +225,7 @@ div.title {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid rgba(0,0,0,.1);
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
 }
 
 div.title h2 {
@@ -247,15 +258,17 @@ div.apps {
     width: 100%;
     height: 180px;
     display: flex;
+    overflow: scroll;
     /* border: 1px solid slateblue; */
 }
 
 div.app {
     /* border: 1px solid darkmagenta; */
-    width: 110px;
+    width: 120px;
     height: 160px;
+    min-width: 120px;
     margin: 10px 5px 10px 5px;
-    padding: 5px;
+    padding: 10px;
     border-radius: 10px;
 }
 
@@ -285,6 +298,3 @@ div.app-information p {
     font-weight: 400;
     text-align: right;
 }
-
-
-
