--- a/css/style.css
+++ b/css/style.css
@@ -328,11 +328,70 @@ div.showcase-app a {
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    transition: box-shadow .4s;
     /* border: 1px solid slateblue; */
+}
+
+div.showcase-app a:hover {
+    filter: brightness(120%);
 }
 
 div.showcase-app a img {
     width: 100%;
     height: 100%;
     border-radius: 10px;
+}
+
+section.applications-groups {
+    width: 100%;
+    height: 200px;
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    border: 1px solid rgba(0, 0, 0, .1);
+    margin-bottom: 32px;
+}
+
+div.apps-groups {
+    width: 100%;
+    height: 150px;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto auto auto;
+    row-gap: 10px;
+    column-gap: 10px;
+    padding: 15px;
+}
+
+div.group a {
+    width: 100%;
+    height: 100%;
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 8px;
+    background-color: #f9fafd;
+    border: 1px solid #f0f0f0;
+    box-shadow: none;
+    transition: box-shadow .4s;
+}
+
+div.group a:hover {
+    background-color: #fefefe;
+    box-shadow: 0 4px 24px rgb(0 0 0 / 10%);
+}
+
+div.subject {
+    /* border: 1px solid forestgreen; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+div.subject p {
+    margin-right: 10px;
+    font-weight: 400;
+    size: 16px;
+    color: #2a2a2a;
+    line-height: 24px;
 }
