--- a/css/style.css
+++ b/css/style.css
@@ -447,3 +447,178 @@ div.more-desc {
     display: block !important;
     margin-top: 20px;
 }
+
+footer {
+    background-color: #fefefe;
+    box-shadow: 0 4px 24px rgb(0 0 0 / 10%);
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    padding: 60px 130px;
+}
+
+div.application-information {
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 60px;
+}
+
+div.descriptions {
+    width: 50%;
+    /* border: 1px solid forestgreen; */
+}
+
+div.descriptions h3 {
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 400;
+    color: #212529;
+    margin-bottom: 18px;
+}
+
+div.descriptions p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 28px;
+    margin-top: 12px;
+    color: #6b6b6b;
+}
+
+div.app-download {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-grow: 0.4;
+    border-radius: 8px;
+    border: 1px solid #e5e7f0;
+}
+
+div.app-download h3 {
+    font-size: 1rem;
+    color: #212529;
+}
+
+div.app-download p {
+    font-size: .75rem;
+    color: #6b6b6b;
+    margin-bottom: 1rem;
+}
+
+div.app-download ul {
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 10px;
+    /* border: 1px solid gold; */
+}
+
+div.app-download ul li a {
+    background-color: #fff;
+    color: #0ea960;
+    border-radius: 4px;
+    border: 1px solid #e5e7f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.3rem 1rem;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 400;
+}
+
+div.app-download ul li a:hover {
+    background-color: #fafafa;
+}
+
+div.company-information {
+    display: flex;
+    padding: 56px 0 0 0;
+    /* border: 1px solid darkgoldenrod; */
+}
+
+div.company-details {
+    flex-grow: 10;
+    /* border: 1px solid green; */
+}
+
+div.company-details ul {
+    height: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto auto auto;
+}
+
+div.company-details ul li a {
+    font-size: 14px;
+    font-weight: 400;
+    color: #212529;
+}
+
+div.company-details ul li a:hover {
+    color: #0ea960;
+}
+
+div.logos {
+    flex-grow: 0.5;
+}
+
+div.logos ul {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-evenly;
+}
+
+div.logos ul li {
+    width: 90%;
+    border: 1px solid #e5e7f0;
+    border-radius: 8px;
+}
+
+div.logos ul li a img {
+    width: 100%;
+    height: 100%;
+}
+
+nav.footer-nav {
+    width: 100%;
+    height: 56px;
+    background-color: #fefefe;
+    box-shadow: 0 4px 24px rgb(0 0 0 / 10%);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 130px;
+}
+
+nav.footer-nav p {
+    font-size: 12px;
+    line-height: 18px;
+    word-spacing: 3px;
+    color: #3a3a3a;
+    font-weight: 400;
+}
+
+nav.footer-nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid greenyellow; */
+}
+
+nav.footer-nav ul li {
+    margin: 0 20px;
+    /* border: 1px solid forestgreen; */
+}
+
+nav.footer-nav ul li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #212529;
+}
+
+nav.footer-nav ul li a:hover {
+    color: #0ea960;
+}
+
+nav.footer-nav ul li a i {
+    font-size: 24px;
+}
